RESOLVED FIXED101480
[EFL][WK2][AC] API tests crash
https://bugs.webkit.org/show_bug.cgi?id=101480
Summary [EFL][WK2][AC] API tests crash
Yael
Reported 2012-11-07 08:39:45 PST
When AC is enabled, 8 API tests are crashing. We need to properly set the evas engine for these tests. A patch is coming.
Attachments
Patch (1.40 KB, patch)
2012-11-07 08:42 PST, Yael
no flags
Yael
Comment 1 2012-11-07 08:42:32 PST
Viatcheslav Ostapenko
Comment 2 2012-11-07 10:51:54 PST
Comment on attachment 172817 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=172817&action=review > Tools/TestWebKitAPI/efl/PlatformWebView.cpp:-49 > - ecoreEvas = ecore_evas_buffer_new(800, 600); It seems you are dropping this ecore_evas_buffer_new . Do you know why it was here?
Yael
Comment 3 2012-11-07 11:38:22 PST
(In reply to comment #2) > (From update of attachment 172817 [details]) Thank you for your comment :) > View in context: https://bugs.webkit.org/attachment.cgi?id=172817&action=review > > > Tools/TestWebKitAPI/efl/PlatformWebView.cpp:-49 > > - ecoreEvas = ecore_evas_buffer_new(800, 600); > > It seems you are dropping this ecore_evas_buffer_new . Do you know why it was here? ecore_evas_buffer_new is not used anywhere else, so I thought it will be ok to change it so that it is the same as everywhere else. I am building webkit with AC turned off, and will report the results of running the tests once I have that.
WebKit Review Bot
Comment 4 2012-11-07 12:41:53 PST
Comment on attachment 172817 [details] Patch Clearing flags on attachment: 172817 Committed r133795: <http://trac.webkit.org/changeset/133795>
WebKit Review Bot
Comment 5 2012-11-07 12:41:57 PST
All reviewed patches have been landed. Closing bug.
Yael
Comment 6 2012-11-07 12:45:11 PST
(In reply to comment #3) > (In reply to comment #2) > > (From update of attachment 172817 [details] [details]) > Thank you for your comment :) > > View in context: https://bugs.webkit.org/attachment.cgi?id=172817&action=review > > > > > Tools/TestWebKitAPI/efl/PlatformWebView.cpp:-49 > > > - ecoreEvas = ecore_evas_buffer_new(800, 600); > > > > It seems you are dropping this ecore_evas_buffer_new . Do you know why it was here? > > ecore_evas_buffer_new is not used anywhere else, so I thought it will be ok to change it so that it is the same as everywhere else. I am building webkit with AC turned off, and will report the results of running the tests once I have that. Sorry for the delay. It took 1 hour 36 minutes to compile :( All 50 tests are passing with my change and AC turned off, so I don't see an issue with the change. thanks.
Note You need to log in before you can comment on or make changes to this bug.