[EFL][WK2][AC] API tests crash https://bugs.webkit.org/show_bug.cgi?id=101480

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-11-07
Reviewed by Kenneth Rohde Christiansen.

When AC is enabled, 8 API tests are crashing. We need to properly set the evas engine for these tests.

* TestWebKitAPI/efl/PlatformWebView.cpp:
(TestWebKitAPI::initEcoreEvas):

Canonical link: https://commits.webkit.org/119592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133795 268f45cc-cd09-0410-ab3c-d52691b4dbfc