Tools/TestWebKitAPI/efl/PlatformWebView.cpp
@@ -41,12 +41,11 @@ static Ecore_Evas* initEcoreEvas()
 {
     ASSERT(ecore_evas_init());
 
-    Ecore_Evas* ecoreEvas;
-
-    if (useX11Window)
-        ecoreEvas = ecore_evas_new(0, 0, 0, 800, 600, 0);
-    else
-        ecoreEvas = ecore_evas_buffer_new(800, 600);
+    const char* engine = 0;
+#if defined(WTF_USE_ACCELERATED_COMPOSITING) && defined(HAVE_ECORE_X)
+    engine = "opengl_x11";
+#endif
+    Ecore_Evas* ecoreEvas = ecore_evas_new(engine, 0, 0, 800, 600, 0);
 
     ASSERT(ecoreEvas);
 
